# ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.db.yml  docker-compose.yml  pyproject.toml
app/: server.py
app/models/: __init__.py  bug_report.py  database.py  duplicate-group.py
app/repositories/: __init__.py  base_repository.py  bug_report.py
app/routes/: __init__.py  bug_report.py
app/schemas/: __init__.py  base.py  bug_report.py
app/services/: bug_report.py
app/utils/: aws.py  constant.py  issue_type_process.py  llm_api.py  queue.py
crawler/: clean.py  crawl.py
preprocessing/: Bug_Report_Classification.ipynb  README.md
preprocessing/utils/: csv_process.py
