[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["namhoai <ch.nam0121@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
sqlalchemy = "^2.0.36"
celery = "^5.4.0"
pydantic = "^2.10.1"
python-multipart = "^0.0.17"
python-dotenv = "^1.0.1"
pyi18n-v2 = "^1.2.2"
psycopg2-binary = "^2.9.10"
litellm = "^1.52.16"
redis = "^5.2.1"
sentence-transformers = "^3.3.1"
scikit-learn = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "app.server:dev"
start = "app.server:start"
migrate_gen = "app.server:migrate_gen"
migrate_run = "app.server:migrate_run"
celery_worker = "app.server:celery_worker"
